# paymcp

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  pytest.ini
docs/: CONTEXT_SUPPORT.md  DOCUMENTATION_UPDATE_SUMMARY.md  MCP_TESTING_COMPREHENSIVE.md  MCP_TESTING_README.md  MCP_TEST_SCRIPTS_DEEP_DIVE.md  PROJECT_ORGANIZATION.md  README.md  SETUP_AND_TESTING_GUIDE.md
scripts/: full_test.sh  quick_test.sh  setup_test_env.py  test_all_providers.py
src/paymcp/: __init__.py  context.py  core.py  state_store.py
src/paymcp/payment/flows/: __init__.py  elicitation.py  progress.py  two_step.py
src/paymcp/providers/: __init__.py  adyen.py  base.py  coinbase.py  paypal.py  square.py
src/paymcp/providers/paypal/: README.md  __init__.py  config.py  provider.py  validator.py
src/paymcp/utils/: constants.py  context.py  elicitation.py  env.py  flow.py  messages.py  response.py  responseSchema.py  state.py
tests/mcp/: test_mcp_context.py  test_mcp_e2e_server.py  test_mcp_prompt_simulation.py  test_mcp_protocol.py  test_mcp_server.py  test_mcp_simple.py  test_mcp_workflow.py
tests/unit/: test_context.py
tests/unit/paypal/: __init__.py  conftest.py  test_config.py  test_integration.py  test_paypal_provider.py  test_validator.py
